# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import productsRouter from "./products";
 import salesRouter from "./sales";
+import inventoryRouter from "./inventory";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(productsRouter);
 router.use(salesRouter);
+router.use(inventoryRouter);
 
 export default router;
